if (WIN32)
  # samba is bundled
  set(sources ${sources} ${CMAKE_CURRENT_SOURCE_DIR}/SMBStorage.cpp CACHE STRING "" FORCE)
  set(headers ${headers} ${CMAKE_CURRENT_SOURCE_DIR}/SMBStorage.h CACHE STRING "" FORCE)
  set(libs ${libs} Mpr.lib CACHE STRING "" FORCE)
  set(compile_definitions ${compile_definitions} HAS_SMB CACHE STRING "" FORCE)
  pretty_printing("SMB" "yes")
else(WIN32)
  # linux platform
  find_package(Talloc QUIET)
  if (TALLOC_FOUND)
    set(sources ${sources} ${CMAKE_CURRENT_SOURCE_DIR}/SMBStorage.cpp CACHE STRING "" FORCE)
    set(headers ${headers} ${CMAKE_CURRENT_SOURCE_DIR}/SMBStorage.h CACHE STRING "" FORCE)
    set(include_dirs ${include_dirs} ${TALLOC_INCLUDE_DIRS} CACHE STRING "" FORCE)
    set(libs ${libs} ${TALLOC_LIBRARIES} CACHE STRING "" FORCE)
    set(compile_definitions ${compile_definitions} HAS_SMB CACHE STRING "" FORCE)
    pretty_printing("SAMBA" "yes")
  else(TALLOC_FOUND)
    pretty_printing("SAMBA" "no")
  endif(TALLOC_FOUND)
endif(WIN32)
