find_package (sqlite3 QUIET)
if (SQLITE3_FOUND)
  set(sources ${sources} ${CMAKE_CURRENT_SOURCE_DIR}/SQLiteStorage.cpp CACHE STRING "" FORCE)
  set(headers ${headers} ${CMAKE_CURRENT_SOURCE_DIR}/SQLiteStorage.h CACHE STRING "" FORCE)
  set(include_dirs ${include_dirs} ${SQLITE3_INCLUDE_DIRS} CACHE STRING "" FORCE)
  set(libs ${libs} ${SQLITE3_LIBRARIES})
  set(compile_definitions ${compile_definitions} HAS_SQLITE3 CACHE STRING "" FORCE)
  pretty_printing("SQLite3" "yes")
else(SQLITE3_FOUND)
  pretty_printing("SQLite3" "no")
endif(SQLITE3_FOUND)
